objects/Issue__c.object
<CustomObject>
    <description>Track issues by users</description>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Data Validation</fullName>
                </value>
                <value>
                    <fullName>User Suggestion/Feedback</fullName>
                </value>
                <value>
                    <fullName>User Question</fullName>
                </value>
                <value>
                    <fullName>Error Message</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment_Count__c</fullName>
        <label>Comment Count</label>
        <summaryForeignKey>Issue_Comment__c.Issue__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Completed_Date__c</fullName>
        <label>Estimated Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Priority__c</fullName>
        <label>Issue Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Status__c</fullName>
        <label>Issue Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Working - Client</fullName>
                </value>
                <value>
                    <fullName>Working - nCino</fullName>
                </value>
                <value>
                    <fullName>Business Decision Needed</fullName>
                </value>
                <value>
                    <fullName>Ready for Retest</fullName>
                </value>
                <value>
                    <fullName>Closed - Resolved</fullName>
                </value>
                <value>
                    <fullName>Follow-On Phase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_Issue_Age__c</fullName>
        <formula>IF( NOT(ISPICKVAL(Issue_Status__c,&quot;Closed - Resolved&quot;)),
Text(FLOOR(NOW() - CreatedDate)) &amp;&quot; &quot;&amp;&quot;day(s)&quot;&amp;&quot; &quot;&amp;Text(FLOOR(MOD( (NOW() - CreatedDate) * 24 ,24))) &amp;&quot; &quot;&amp;&quot;hrs&quot;&amp;&quot; &quot;&amp;Text( FLOOR(MOD(((NOW() - CreatedDate) * 24)*60 ,60)))&amp;&quot; &quot;&amp;&quot;min&quot;,
&quot;Issue Closed&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Issue Age</label>
        <type>Text</type>
    </fields>
    <label>Issue</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Issue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>